--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta charset="utf-8">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="edit-Type" edit="text/html; charset=utf-8">
-
+<meta name="robots" content="noindex">
+<link rel="icon" href="favicon.png">
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <link href="//fonts.googleapis.com/css?family=Lato:400|Inconsolata" rel="stylesheet" type="text/css">
