Remove the roll.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ $(function() {
 
         , fieldValues: {
             summary : '[Replace with feature request title]',
-            description : '*Description of Request:* \n\n\n*Requestor Name:*\n*Requestor Institution:* \n*Requestor Role:* \n\n*Customer value:* <What root problem will this help them solve? How will this help improve their operations or workflows/processes?> \n\n*Response required by:* \n\n*Additional comments:* ',
+            description : '*Description of Request:* \n\n\n*Requestor Name:*\n*Requestor Institution:*\n\n*Customer value:* <What root problem will this help them solve? How will this help improve their operations or workflows/processes?> \n\n*Response required by:* \n\n*Additional comments:* ',
             priority : '3'
         }
       }
