Add back the intro and strike new

--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@ body {
 
     <br>
     <p>
-      Welcome to the new iLab New Feature Request form! We’ve moved the process
+      Welcome to the iLab New Feature Request form! We’ve moved the process
       of submitting new feature requests to JIRA to help streamline access for
       all team members and improve communications about request submissions.
       Please use this form to submit suggestions for new features or
       enhancements to our current system. The Product Marketing (PdM) team will
       review these requests on a regular basis and will communicate the outcome
       of the PdM review with the iLab request submitter, either directly or
-      through the use of Comments in the JIRA story.</p>
+      through the use of Comments in the JIRA story.
+    </p>
 
     <p>If approved, requests may be:
     <ol><li>Added to a team's product line backlog if the request or enhancement
