--- a/index.html
+++ b/index.html
@@ -41,26 +41,16 @@ body {
 
     <br>
     <p>
-      Welcome to the iLab New Feature Request form! We’ve moved the process
-      of submitting new feature requests to JIRA to help streamline access for
-      all team members and improve communications about request submissions.
-      Please use this form to submit suggestions for new features or
-      enhancements to our current system. The Product Marketing (PdM) team will
-      review these requests on a regular basis and will communicate the outcome
-      of the PdM review with the iLab request submitter, either directly or
-      through the use of Comments in the JIRA story.
+     Welcome to the new iLab New Feature Request form! Please use this form to submit suggestions for new features or enhancements to our current system. The Product Marketing (PdM) team will review these requests on a regular basis and will communicate the outcome of the PdM review with the iLab request submitter, either directly or through the use of Comments in the JIRA story. 
     </p>
 
     <p>If approved, requests may be:
-    <ol><li>Added to a team's product line backlog if the request or enhancement
-        appears to be on the smaller side (fewer than 8 points of work)</li>
-        <li>If the request or enhancement appears to fall into the category of a
-          larger project, a Business Brief may be presented to senior leadership
-          for further review and approval.</li>
+    <ol><li>Added to a team's product line backlog if the request or enhancement appears to be on the smaller side (less than 8 points of work)</li>
+        <li>If the request or enhancement appears to fall into the category of a larger project, a Business Brief may be presented to senior leadership for further review and approval.</li>
     </ol>
     </p>
     <p>
-        iLab team members are encouraged to use JIRA's Voting capabilities to indicate their support for a feature request or enhancement! We suggest that you bookmark this JIRA board [insert JIRA board URL, to be created by Janie], log in occasionally to check for new submissions and use the "Vote for this issue" option in the upper right-hand section of the JIRA story. Your votes will assist PdM and senior staff in prioritizing requests and enhancements.  
+    If you have any questions, please feel free to email the PdM team at PDL-ILAB,PRODMKTG (A-USA,expdl1)  <a mailto="prodmktg.pdl-ilab@agilent.com.">prodmktg.pdl-ilab@agilent.com</a>.
     </p>
 
   </div> <!-- column -->
