Adjust wording of how things will be added to the backlog

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
     </p>
 
     <p>If approved, requests may be:
-    <ol><li>Added to a team's product line backlog if the request or enhancement appears to be on the smaller side (less than 8 points of work)</li>
+    <ol><li>Added to the Minor Features and Enhancements epic if the request or enhancement appears to be on the smaller side (fewer than 8 points of work)</li>
         <li>If the request or enhancement appears to fall into the category of a larger project, a Business Brief may be presented to senior leadership for further review and approval.</li>
     </ol>
     </p>
