Update the page text.:w

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ body {
 
     <br>
     <p>
-     Welcome to the new iLab New Feature Request form! Please use this form to submit suggestions for new features or enhancements to our current system. The Product Marketing (PdM) team will review these requests on a regular basis and will communicate the outcome of the PdM review with the iLab request submitter, either directly or through the use of Comments in the JIRA story. 
+      Welcome to the new iLab New Feature Request form! Please use this form to submit suggestions for new features or enhancements to our current system. The Product Design (PdM) team will review these requests on a regular basis and will communicate the outcome of the PdM review with the iLab request submitter, either directly or through the use of Comments in the JIRA story.
     </p>
 
     <p>If approved, requests may be:
-    <ol><li>Added to the Minor Features and Enhancements epic if the request or enhancement appears to be on the smaller side (fewer than 8 points of work)</li>
+    <ol><li>Added to the Minor Features and Enhancements epic if the request or enhancement appears to be on the smaller side (8 points or less of work)</li>
         <li>If the request or enhancement appears to fall into the category of a larger project, a Business Brief may be presented to senior leadership for further review and approval.</li>
     </ol>
     </p>
