--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ body {
     </p>
 
     <p>If approved, requests may be:
-    <ol><li>Added to the Minor Features and Enhancements epic if the request or enhancement appears to be on the smaller side (8 points or less of work)</li>
+    <ol><li>Added to the Minor Features and Enhancements epic if the request or
+        enhancement appears to be on the smaller side (8 points or fewer of work)</li>
         <li>If the request or enhancement appears to fall into the category of a larger project, a Business Brief may be presented to senior leadership for further review and approval.</li>
     </ol>
     </p>
