Trying to fix bug with custom form.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@ $(function() {
         , fieldValues: {
             summary : '[Replace with feature request title]',
             description : '*Description of Request:* \n\n\n*Requestor Name:*\n*Requestor Institution:*\n\n*Customer value:* Please describe the Customer Value in the following format: “As a ____, I need to ____, so I can ____” \n\n*Response required by:* \n\n*Additional comments:* ',
-            priority : '3'
+            priority : '3',
+            customfield_12000 : 'Jira Collector'
+          
         }
       }
   });
